feat: implement api to get all currencies deposit-withdraw config
